Added usbtv backported driver
* Added usbtv & easycap to configuration

--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -598,3 +598,9 @@ CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_LIST=y
 
 CONFIG_CPU_VOLTAGE_CONTROL=y
+
+CONFIG_STAGING_MEDIA=y
+CONFIG_EASYCAP=y
+CONFIG_EASYCAP_DEBUG=y
+CONFIG_VIDEO_USBTV=y
+CONFIG_IKCONFIG=y
